fixed link from index

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
-    <h1>oven baked fries</h1>
-    <a href="https://www.spendwithpennies.com/crispy-oven-fries/"> OVEN BAKED FRIES</a>
+
+    
 </head>
 <body>
-    
+    <a href="recipes/ovenfries.html"> OVEN BAKED FRIES</a>
 </body>
 </html>
