--- a/recipes/index.html
+++ b/recipes/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
-
+    <h1>Odin Recipes</h1>
     
 </head>
 <body>
-    <a href="recipes/ovenfries.html"> OVEN BAKED FRIES</a>
+    <a href="./ovenfries.html"> OVEN BAKED FRIES</a>
 </body>
 </html>
