--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     
 </head>
 <body>
-    <a href="./ovenfries.html"> OVEN BAKED FRIES</a>
+    <a href="./recipes/ovenfries.html"> OVEN BAKED FRIES</a>
 </body>
 </html>
